# yui

./: .gitignore  .gitmodules  README.md  pyproject.toml
yui/: __main__.py  browser.py  client.py  daemon.py  tray.py  tui.py  visualizer.py
