[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yui"
version = "0.1.0"
description = "YouTube Music TUI powered by headless Brave"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "textual>=0.47.0",
    "Pillow>=10.0.0",
]

[project.scripts]
yui = "yui.__main__:main"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
